[package]
name = "common-rs"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]

[features]
default = ["restful", "config", "consul", "sm"]
config = ["dep:config", "dep:reqwest"]
consul = ["dep:reqwest"]
restful = ["dep:salvo", "dep:serde", "dep:serde_json", "dep:tokio"]
sm = ["dep:efficient-sm2", "dep:libsm"]

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
config = { version = "0.13", optional = true }
efficient-sm2 = { version = "0.2", optional = true }
notify = { version = "6.1", features = ["serde"] }
parking_lot = "0.12"
libsm = { version = "0.6", optional = true }
reqwest = { version = "0.11", optional = true }
salvo = { version = "0.65", features = ["oapi"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.35", features = ["signal", "macros"], optional = true }
tracing = "0.1"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"

[profile.dev.package.backtrace]
opt-level = 3
