[package]
name = "common-rs"
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]

[features]
default = ["config", "etcd", "log", "redis", "restful", "sm"]
config = [
    "dep:async-trait",
    "dep:config",
    "dep:reqwest",
    "dep:notify",
    "dep:parking_lot",
    "dep:tracing",
]
etcd = ["dep:etcd-client", "dep:tokio", "dep:tracing"]
log = [
    "dep:chrono",
    "dep:time",
    "dep:tracing",
    "dep:tracing-appender",
    "dep:tracing-subscriber",
]
redis-cluster = ["redis", "redis/cluster-async"]
redis = ["dep:redis", "dep:tokio", "dep:tracing", "dep:cfg-if"]
restful = [
    "dep:axum",
    "dep:axum-extra",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
]
sm = ["dep:efficient-sm2", "dep:libsm"]

[dependencies]
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", features = ["macros"], optional = true }
axum-extra = { version = "0.9", optional = true }
cfg-if = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
color-eyre = "0.6"
config = { version = "0.14", optional = true }
efficient-sm2 = { version = "0.2", optional = true }
etcd-client = { version = "0.14", optional = true }
notify = { version = "7.0", features = ["serde"], optional = true }
num_enum = "0.7"
parking_lot = { version = "0.12", optional = true }
libsm = { version = "0.6", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "json"], optional = true }
reqwest = { version = "0.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
time = { version = "0.3", optional = true }
tokio = { version = "1.42", features = ["signal", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
], optional = true }

[lints.rust]
missing_copy_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"

[profile.dev.package.backtrace]
opt-level = 3
